refactor client-gen-config model