@@ -8,14 +8,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.StringWriter;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Tests that the prot-cxf-sei.vm template correctly emits custom SEI-level annotations (FR-014).
+ * Tests that the prot-cxf-sei.vm template emits required and optional SEI-level annotations.
  */
 class CustomSEIGeneratorSeiAnnotationTest {
 
@@ -30,38 +29,68 @@ class CustomSEIGeneratorSeiAnnotationTest {
     }
 
     @Test
-    void template_rendersSeiAnnotation_beforeInterfaceDeclaration() throws Exception {
+    void template_alwaysRendersRegisteredSoapClient_beforeInterfaceDeclaration() throws Exception {
         VelocityContext ctx = buildMinimalContext();
-        ctx.put("customSeiAnnotations", List.of("com.example.CustomAnnotation"));
-        ctx.put("customOperationAnnotations", Map.of());
+        ctx.put("customConfigKey", "myClient");
+        ctx.put("customStaticHeaders", List.of());
+        ctx.put("customDynamicHeaders", List.of());
+        ctx.put("customOperationConfigs", Map.of());
 
         String rendered = render(ctx);
 
-        int annotationIdx = rendered.indexOf("@com.example.CustomAnnotation");
+        int annotationIdx = rendered.indexOf("@prot.soap.RegisteredSoapClient(\"myClient\")");
         int interfaceIdx = rendered.indexOf("public interface");
-        assertTrue(annotationIdx >= 0, "Rendered output should contain @com.example.CustomAnnotation:\n" + rendered);
+        assertTrue(annotationIdx >= 0,
+                "Rendered output should contain @prot.soap.RegisteredSoapClient(\"myClient\"):\n" + rendered);
         assertTrue(interfaceIdx >= 0, "Rendered output should contain 'public interface'");
         assertTrue(annotationIdx < interfaceIdx,
-                "@com.example.CustomAnnotation should appear before 'public interface'");
+                "@prot.soap.RegisteredSoapClient should appear before 'public interface'");
     }
 
     @Test
-    void template_noSeiAnnotations_doesNotEmitAnnotation() throws Exception {
+    void template_usesPortTypeNameWhenConfigKeyMissing() throws Exception {
         VelocityContext ctx = buildMinimalContext();
-        ctx.put("customSeiAnnotations", Collections.emptyList());
-        ctx.put("customOperationAnnotations", Map.of());
+        ctx.put("customConfigKey", "   ");
+        ctx.put("customStaticHeaders", List.of());
+        ctx.put("customDynamicHeaders", List.of());
+        ctx.put("customOperationConfigs", Map.of());
 
         String rendered = render(ctx);
 
-        assertFalse(rendered.contains("@com.example.CustomAnnotation"),
-                "No annotation should appear when customSeiAnnotations is empty");
+        assertTrue(rendered.contains("@prot.soap.RegisteredSoapClient(\"MyService\")"),
+                "Port type name should be used as fallback config key");
+    }
+
+    @Test
+    void template_staticAndDynamicHeaders_areConditional() throws Exception {
+        VelocityContext withHeaders = buildMinimalContext();
+        withHeaders.put("customConfigKey", "myClient");
+        withHeaders.put("customStaticHeaders", List.of(staticHeader("X-Tenant", "demo", true)));
+        withHeaders.put("customDynamicHeaders", List.of("com.example.HeaderProvider"));
+        withHeaders.put("customOperationConfigs", Map.of());
+
+        String renderedWithHeaders = render(withHeaders);
+        assertTrue(renderedWithHeaders.contains("@prot.soap.StaticHeaders"));
+        assertTrue(renderedWithHeaders.contains("@prot.soap.StaticHeader(name = \"X-Tenant\", value = \"demo\")"));
+        assertTrue(renderedWithHeaders.contains("@prot.soap.DynamicHeaders"));
+        assertTrue(renderedWithHeaders.contains("\"com.example.HeaderProvider\""));
+
+        VelocityContext withoutHeaders = buildMinimalContext();
+        withoutHeaders.put("customConfigKey", "myClient");
+        withoutHeaders.put("customStaticHeaders", List.of());
+        withoutHeaders.put("customDynamicHeaders", List.of());
+        withoutHeaders.put("customOperationConfigs", Map.of());
+
+        String renderedWithoutHeaders = render(withoutHeaders);
+        assertFalse(renderedWithoutHeaders.contains("@prot.soap.StaticHeaders"));
+        assertFalse(renderedWithoutHeaders.contains("@prot.soap.DynamicHeaders"));
     }
 
     // ---- helpers -------------------------------------------------------
 
     private VelocityContext buildMinimalContext() {
         VelocityContext ctx = new VelocityContext();
-        ctx.put("intf", new StubIntf("com.example", "MyService", Collections.emptyList()));
+        ctx.put("intf", new StubIntf("com.example", "MyService", List.of()));
         ctx.put("markGenerated", "false");
         ctx.put("suppressGeneratedDate", "true");
         ctx.put("fullversion", "test");
@@ -69,6 +98,14 @@ class CustomSEIGeneratorSeiAnnotationTest {
         ctx.put("currentdate", "today");
         ctx.put("seiSuperinterfaceString", "");
         return ctx;
+    }
+
+    private StaticHeader staticHeader(String name, String value, Boolean ifExisting) {
+        StaticHeader header = new StaticHeader();
+        header.setName(name);
+        header.setValue(value);
+        header.setIfExisting(ifExisting);
+        return header;
     }
 
     private String render(VelocityContext ctx) throws Exception {
@@ -92,8 +129,8 @@ class CustomSEIGeneratorSeiAnnotationTest {
 
         public String getPackageName() { return packageName; }
         public String getName() { return name; }
-        public List<String> getImports() { return Collections.emptyList(); }
-        public List<String> getAnnotations() { return Collections.emptyList(); }
+        public List<String> getImports() { return List.of(); }
+        public List<String> getAnnotations() { return List.of(); }
         public List<StubMethod> getMethods() { return methods; }
         public String getPackageJavaDoc() { return ""; }
         public String getClassJavaDoc() { return ""; }
@@ -106,10 +143,10 @@ class CustomSEIGeneratorSeiAnnotationTest {
 
         public String getName() { return name; }
         public String getJavaDoc() { return ""; }
-        public List<String> getAnnotations() { return Collections.emptyList(); }
+        public List<String> getAnnotations() { return List.of(); }
         public String getReturnValue() { return "void"; }
-        public List<String> getParameterList() { return Collections.emptyList(); }
-        public List<StubException> getExceptions() { return Collections.emptyList(); }
+        public List<String> getParameterList() { return List.of(); }
+        public List<StubException> getExceptions() { return List.of(); }
     }
 
     public static class StubException {
